PARQUET-1935: [C++] Fix bug in WriteBatchSpaced

The arrow code path doesn't call this method of not-null columns with no null parents, so this wasn't caught in arrow tests.

The only time we can pass through counts is if definition level happens to be zero.

Also fix some potential UBSan issues with adding offset to values.

Closes #8516 from emkornfield/ARROW-10377

Authored-by: Micah Kornfield <emkornfield@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>